syntax = "proto3";

package AHAOAHA.Annal;

import "google/api/annotations.proto";
import "google/rpc/status.proto";
import "google/protobuf/timestamp.proto";
import "todotask.proto";

import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";

option go_package = "./gen";

service TodoService{
    rpc CreateTodoTask(CreateTodoTaskRequest) returns (CreateTodoTaskResponse) {
        option (google.api.http) = {
            post: "/v1/CreateTodoTask",
            body: "*",
        };
    }

    rpc ListTodoTasks(ListTodoTasksRequest) returns (ListTodoTasksResponse) {
        option (google.api.http) = {
            post: "/v1/ListTodoTasks",
            body: "*",
        };
    }

    rpc UpdateTodoTask(UpdateTodoTaskRequest) returns (UpdateTodoTaskResponse) {
        option (google.api.http) = {
            post: "/v1/UpdateTodoTask",
            body: "*",
        };
    }

    rpc PruneTodoTasks(PruneTodoTasksRequest) returns (PruneTodoTasksResponse) {
        option (google.api.http) = {
            post: "/v1/PruneTodoTasks",
            body: "*",
        };
    }
}

message CreateTodoTaskRequest {
    string title = 1 [(validate.rules).string = {min_len: 0, max_len: 256}];
    string desp = 2 [(validate.rules).string = {min_len: 0, max_len: 1024}];
    google.protobuf.Timestamp plan = 3;
}

message CreateTodoTaskResponse {
    google.rpc.Status status = 1;
}


message ListTodoTasksRequest {
    
}

message ListTodoTasksResponse {
    repeated TodoTask tasks = 1;
    google.rpc.Status status = 2;
}

message UpdateTodoTaskRequest {
    TodoTask task = 1;
}

message UpdateTodoTaskResponse {
    google.rpc.Status status = 2;
}

message PruneTodoTasksRequest {}

message PruneTodoTasksResponse {
    google.rpc.Status status = 1;
}